--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/PoolTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/PoolTemplate.html
@@ -1,5 +1,5 @@
 ﻿
-<div class="col-lg-2  style-col">
-    <label class="control-label" style="padding-top:6px">Under construction</label>
+<vr-columns colnum="2">
+    <vr-label stabdalone>Under construction</vr-label>
 
-</div>
+</vr-columns>
