--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
@@ -422,6 +422,11 @@ input.ui-grid-filter-input[type="text"] {
     width:auto;
     min-width:100px;
     -webkit-opacity: 0.25;
+  -webkit-transition: all 3s ease;
+  -moz-transition: all 3s ease;
+  -ms-transition: all 3s ease;
+  -o-transition: all 3s ease;
+  transition: all 3s ease;
 }
 .tooltip-error:after, .tooltip-error:before {
 	right: 100%;
@@ -445,7 +450,13 @@ input.ui-grid-filter-input[type="text"] {
     margin-left: -5px;
 }
 
-
+.tooltip-error {
+    transition: 0.5s linear all;
+    opacity: 1;
+}
+.tooltip-error.ng-hide {
+    opacity: 0;
+}
 #custom  {
   border: 0px ;
    
