--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/CustomerTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/CustomerTemplate.html
@@ -1,5 +1,5 @@
 ﻿<div ng-controller="CustomerController">
-    <div class="col-lg-2  style-col">
+    <vr-columns colnum="2">
         <div class="dropdown dropdown-custom" id="dropdownMenuddl">
             <label class="dropdown-toggle hand-cursor" style="padding-top: 6px" type="button" id="dropdownMenuCu" data-toggle="dropdown" aria-expanded="true" ng-model='carrierAccountSelectionOption' >
                 {{carrierAccountSelectionOption == 1 ? "  Customers: " : "  All Customers Except:"}}
@@ -13,11 +13,12 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </vr-columns>
     
-    <div class="col-lg-2  style-col">
+    <vr-columns colnum="2">
 
-        <vr-dropdown type="multiple" options="optionsCustomers" datatextfield="Name" datavaluefield="CarrierAccountID"
-                     entityname="Customers"></vr-dropdown>
-    </div>
+        <vr-select ismultipleselection isrequired datasource="optionsCustomers.datasource" selectedvalues="optionsCustomers.selectedvalues" datatextfield="Name" datavaluefield="CarrierAccountID"
+                   entityname="Customers"></vr-select>
+        
+    </vr-columns>
 </div>
