--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/ProductTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/ProductTemplate.html
@@ -1,3 +1,3 @@
-﻿<div class="col-lg-2  style-col">
-    <label class="control-label" style="padding-top:6px">Under construction</label>
+﻿<vr-columns colnum="2">
+    <vr-label standalone>Under construction</vr-label>
 </div>
