close vr-button
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22348

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor.html
@@ -70,8 +70,8 @@
                 <vr-columns colnum="12" simplecol>
                     <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
                         <div transclude-to="buttons">
-                            <button style="border-radius: 0px; border-color: transparent;  background-color: transparent; color: #FFF; " type="button" class="btn btn-default btncustom" aria-label="Left Align" ng-click="$hide()">Cancel<span style="padding-left:4px" class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
                             <vr-button type="Save" formname="formRouteRuleEditor" data-onclick="saveRule" isasynchronous=" true" ></vr-button>
+                            <vr-button type="Close" data-onclick="hide"></vr-button>
                          </div>
                     </vr-actionbar>                    
                 </vr-columns>
