--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-datagrid.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-datagrid.html
@@ -1,1 +1,1 @@
-﻿<div id="custom" class="gridroute" ui-grid="ctrl.gridOptions"></div>
+﻿<div id="custom" class="gridroute" ui-grid="ctrl.gridOptions" ui-grid-auto-resize ng-style="ctrl.getGridHeight(ctrl.gridOptions)"></div>
