--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
@@ -18,11 +18,11 @@
                 <vr-columns colnum="2">
                     <vr-select label="Suppliers:" datasource="suppliers"
                                datatextfield="Name" datavaluefield="CarrierAccountID" selectedvalues="selectedSuppliers" ismultipleselection></vr-select>
-                </vr-columns>               
+                </vr-columns>
             </vr-row>
             <vr-row removeline="true">
                 <vr-columns colnum="2">
-                    <vr-datetimepicker type="date" value="fromDate" label="From:" isrequired customvalidate="customvalidateTestFrom"></vr-datetimepicker>
+                    <vr-datetimepicker type="date" value="fromDate" label="From:" isrequired></vr-datetimepicker>
                 </vr-columns>
                 <vr-columns colnum="2">
                     <vr-datetimepicker type="date" value="toDate" label="To:" isrequired customvalidate="customvalidateTestTo"></vr-datetimepicker>
@@ -36,16 +36,19 @@
             <div transclude-to="buttons">
                 <vr-button type="Search" formname="formFilter" data-onclick="getData" isasynchronous=" true" isdisabled="formState.gettingDataDisabled"></vr-button>
                 <vr-button type="Reset"></vr-button>
-            </div>                
-</vr-actionbar>
+            </div>
+        </vr-actionbar>
     </vr-row>
 
     <div ng-show="showResult">
         <vr-row>
-            <vr-columns colnum="5">
+            <vr-columns colnum="3">
+                <vr-datagrid data-on-ready="onOverallGridReady"></vr-datagrid>
+            </vr-columns>
+            <vr-columns colnum="4">
                 <vr-chart data-on-ready="chartSelectedMeasureReady" style="display:inline-block"></vr-chart>
             </vr-columns>
-            <vr-columns colnum="5">
+            <vr-columns colnum="4">
                 <vr-chart data-on-ready="chartSelectedEntityReady" style="display:inline-block"></vr-chart>
             </vr-columns>
         </vr-row>
@@ -74,11 +77,9 @@
             <vr-columns colnum="12">
                 <div id="custom" class="gridroute" ui-grid="gridOptionsAllMeasures" ui-grid-auto-resize ng-style="getGridHeight(gridOptionsAllMeasures)"></div>
             </vr-columns>
-            <div style="float:right;margin-right:25px">
-                <vr-label>
-                    Page {{currentPage}} of {{numberOfPages}}
-                </vr-label>
-            </div>
+            <vr-label style="float:right;margin-right:25px">
+                Page {{currentPage}} of {{numberOfPages}}
+            </vr-label>
         </vr-row>
     </div>
 </vr-panel>
