Zone Monitor and Chart
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22364

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/SeniorManagementDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/SeniorManagementDashboard.html
@@ -20,22 +20,22 @@
             </vr-row>
         </vr-form>
     </div>
-    <vr-row removeline="true">
+    <vr-row removeline>
         <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
             
         </vr-actionbar>
     </vr-row>
     <vr-row>
-        <vr-columns colnum="4">
-            <vr-chart data-on-ready="chartTopDestinationsReady" style="display:inline-block"></vr-chart>
+        <vr-columns colnum="5">
+            <vr-chart data-on-ready="chartTopDestinationsReady"></vr-chart>
         </vr-columns>
     </vr-row>
     <vr-row>
-        <vr-columns colnum="4">
-            <vr-chart data-on-ready="chartTopCustomersReady" style="display:inline-block"></vr-chart>
+        <vr-columns colnum="5">
+            <vr-chart data-on-ready="chartTopCustomersReady" ></vr-chart>
         </vr-columns>
-        <vr-columns colnum="4">
-            <vr-chart data-on-ready="chartTopSuppliersReady" style="display:inline-block"></vr-chart>
+        <vr-columns colnum="5">
+            <vr-chart data-on-ready="chartTopSuppliersReady" ></vr-chart>
         </vr-columns>
     </vr-row>
 </vr-panel>
