--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/ZoneDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/ZoneDashboard.html
@@ -26,17 +26,17 @@
         </vr-form>
     </div>
 
-    <vr-row removeline="true">
+    <vr-row removeline>
         <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
 
         </vr-actionbar>
     </vr-row>
     <vr-row>
-        <vr-columns colnum="5">
-            <vr-chart data-on-ready="chartTopDestinationsReady" style="display:inline-block"></vr-chart>
+        <vr-columns colnum="6">
+            <vr-chart data-on-ready="chartTopDestinationsReady"></vr-chart>
         </vr-columns>
         <vr-columns colnum="5">
-            <vr-chart data-on-ready="chartZoneReady" style="display:inline-block"></vr-chart>
+            <vr-chart data-on-ready="chartZoneReady"></vr-chart>
         </vr-columns>
     </vr-row>
     <vr-row>
