--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Reports/ZoneDetails.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Reports/ZoneDetails.html
@@ -30,7 +30,7 @@
             </vr-row>
         </vr-form>
     </div>
-    <vr-row removeline="true">
+    <vr-row removeline>
         <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
         </vr-actionbar>
     </vr-row>
