--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleEditor.html
@@ -57,7 +57,7 @@
 
                             </div>
                         </vr-row>
-                        <vr-row removeline="true">
+                        <vr-row removeline>
                             <vr-columns colnum="12">
                                 <var-label>Reason:</var-label>
                                 <textarea class="form-control" ng-model="Reason" />
@@ -66,7 +66,7 @@
                     </vr-form>
                 </vr-panel>
             </div>
-            <vr-row removeline="true">
+            <vr-row removeline>
                 <vr-columns colnum="12" simplecol>
                     <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
                         <div transclude-to="buttons">
