--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/TopManagementDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/TopManagementDashboard.html
@@ -19,7 +19,7 @@
             </vr-row>
         </vr-form>
     </div>
-    <vr-row removeline="true">
+    <vr-row removeline>
         <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
 
         </vr-actionbar>
