--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
@@ -2,7 +2,7 @@
 <vr-panel>
     <vr-form name="formFilter">
         <div class="am-collapse" ng-hide="filterSectionCollapsed" ng-init="formState={gettingDataDisabled: false}">
-            <vr-row removeline="true">
+            <vr-row removeline>
                 <vr-columns colnum="2">
                     <vr-select label="Switches:" datasource="switches"
                                datatextfield="Name" datavaluefield="SwitchId" selectedvalues="selectedSwitches" ismultipleselection></vr-select>
@@ -20,7 +20,7 @@
                                datatextfield="Name" datavaluefield="CarrierAccountID" selectedvalues="selectedSuppliers" ismultipleselection></vr-select>
                 </vr-columns>
             </vr-row>
-            <vr-row removeline="true">
+            <vr-row removeline>
                 <vr-columns colnum="2">
                     <vr-datetimepicker type="date" value="fromDate" label="From:" isrequired></vr-datetimepicker>
                 </vr-columns>
@@ -31,7 +31,7 @@
             <vr-row></vr-row>
         </div>
     </vr-form>
-    <vr-row removeline="true">
+    <vr-row removeline>
         <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
             <div transclude-to="buttons">
                 <vr-button type="Search" formname="formFilter" data-onclick="getData" isasynchronous=" true" isdisabled="formState.gettingDataDisabled"></vr-button>
@@ -42,14 +42,30 @@
 
     <div ng-show="showResult">
         <vr-row>
-            <vr-columns colnum="3">
-                <vr-datagrid data-on-ready="onOverallGridReady"></vr-datagrid>
+            <vr-columns colnum="7">
+                <div class="panel-primary">
+                    <div class="panel-heading">Overall</div>
+                    <div class="panel-body">
+                        <vr-row removeline>
+                            <vr-columns colnum="4">
+                                <vr-datagrid data-on-ready="onOverallGridReady"></vr-datagrid>
+                            </vr-columns>
+                            <vr-columns colnum="7">
+                                <vr-chart data-on-ready="chartSelectedMeasureReady"></vr-chart>
+                            </vr-columns>
+                        </vr-row>
+                       
+                    </div>
+
+                </div>
             </vr-columns>
             <vr-columns colnum="4">
-                <vr-chart data-on-ready="chartSelectedMeasureReady" style="display:inline-block"></vr-chart>
-            </vr-columns>
-            <vr-columns colnum="4">
-                <vr-chart data-on-ready="chartSelectedEntityReady" style="display:inline-block"></vr-chart>
+                <div class="panel-primary">
+                    <div class="panel-heading">Zone Measures</div>
+                    <div class="panel-body">
+                        <vr-chart data-on-ready="chartSelectedEntityReady"></vr-chart>
+                    </div>
+                </div>
             </vr-columns>
         </vr-row>
         <div ng-class="{'disabledbutton': formState.gettingDataDisabled}">
