bread crumb and panel-vr
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22365

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
@@ -42,8 +42,8 @@
 
     <div ng-show="showResult">
         <vr-row>
-            <vr-columns colnum="7">
-                <div class="panel-primary">
+            <vr-columns colnum="7" simplecol>
+                <div class="panel-primary panel-vr">
                     <div class="panel-heading">Overall</div>
                     <div class="panel-body">
                         <vr-row removeline>
@@ -54,13 +54,13 @@
                                 <vr-chart data-on-ready="chartSelectedMeasureReady"></vr-chart>
                             </vr-columns>
                         </vr-row>
-                       
+
                     </div>
 
                 </div>
             </vr-columns>
-            <vr-columns colnum="4">
-                <div class="panel-primary">
+            <vr-columns colnum="5" simplecol>
+                <div class="panel-primary panel-vr">
                     <div class="panel-heading">Zone Measures</div>
                     <div class="panel-body">
                         <vr-chart data-on-ready="chartSelectedEntityReady"></vr-chart>
