--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
@@ -1,7 +1,7 @@
 ﻿
 <vr-panel>
     <vr-form name="formFilter">
-        <div class="am-collapse" ng-hide="filterSectionCollapsed" ng-init="formState={gettingDataDisabled: false}">
+        <div  ng-hide="filterSectionCollapsed" ng-init="formState={gettingDataDisabled: false}">
             <vr-row removeline>
                 <vr-columns colnum="2">
                     <vr-select label="Switches:" datasource="switches"
