--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/simple-sidebar.css
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/simple-sidebar.css
@@ -41,7 +41,7 @@
 #page-content-wrapper {
     width: 100%;
     position: absolute;
-    padding: 15px;
+    padding: 0px 15px;
 }
 
 #wrapper.toggled #page-content-wrapper {
@@ -115,7 +115,7 @@
     }
 
     #page-content-wrapper {
-        padding: 20px;
+        padding: 0px 20px;
         position: relative;
     }
 
