--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/SeniorManagementDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/SeniorManagementDashboard.html
@@ -1,28 +1,30 @@
 ﻿<vr-panel>
-    <div class="am-collapse" ng-hide="filterSectionCollapsed">
+    <div class="am-collapse" ng-hide="filterSectionCollapsed" ng-init="filterSectionCollapsed=true">
         <vr-form name="filterForm">
             <vr-row>
                 <vr-columns colnum="2">
                     <vr-label>Date Period:</vr-label>
                     <vr-dropdown datatextfield="name" datavaluefield="value"
-                                 entityname="" type="standard" options="dateTimeFilterOption" data-onselectionchange="updateCharts"></vr-dropdown>
+                                 entityname="" type="standard" options="dateTimeFilterOption"></vr-dropdown>
                 </vr-columns>
                 <vr-columns colnum="2">
                     <vr-label>Measure:</vr-label>
                     <vr-dropdown datatextfield="name" datavaluefield="value"
-                                 entityname="" type="standard" options="optionsMeasureTypes" data-onselectionchange="updateCharts"></vr-dropdown>
+                                 entityname="" type="standard" options="optionsMeasureTypes"></vr-dropdown>
                 </vr-columns>
                 <vr-columns colnum="2">
                     <vr-label>Top:</vr-label>
                     <vr-dropdown datatextfield="value" datavaluefield="value"
-                                 entityname="" type="standard" options="optionTopCounts" data-onselectionchange="updateCharts"></vr-dropdown>
+                                 entityname="" type="standard" options="optionTopCounts"></vr-dropdown>
                 </vr-columns>
             </vr-row>
         </vr-form>
     </div>
     <vr-row removeline>
         <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
-            
+            <div transclude-to="buttons">
+                <vr-button type="Search" formname="formFilter" data-onclick="updateCharts" isasynchronous=" true"></vr-button>
+            </div>
         </vr-actionbar>
     </vr-row>
     <vr-row>
