--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/TopManagementDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/TopManagementDashboard.html
@@ -1,19 +1,19 @@
 ﻿<vr-panel>
-    <div class="am-collapse" ng-hide="filterSectionCollapsed">
+    <div class="am-collapse" ng-hide="filterSectionCollapsed" ng-init="filterSectionCollapsed=true">
         <vr-form name="filterForm">
             <vr-row>
 
                 <vr-columns colnum="2">
                     <vr-label>Grouped By:</vr-label>
                     <vr-dropdown datatextfield="name" datavaluefield="value"
-                                 entityname="" type="standard" options="timeDimensionTypesOption" onselectionchange="updateChart"></vr-dropdown>
+                                 entityname="" type="standard" options="timeDimensionTypesOption"></vr-dropdown>
                 </vr-columns>
-                <vr-columns>
-                    <vr-datetimepicker type="date" value="fromDate" label="From:" onvaluechanged="updateChart"></vr-datetimepicker>
+                <vr-columns colnum="2">
+                    <vr-datetimepicker type="date" value="fromDate" label="From:" isrequired></vr-datetimepicker>
                 </vr-columns>
 
-                <vr-columns>
-                    <vr-datetimepicker type="date" value="toDate" label="To:" onvaluechanged="updateChart"></vr-datetimepicker>
+                <vr-columns colnum="2">
+                    <vr-datetimepicker type="date" value="toDate" label="To:" isrequired></vr-datetimepicker>
                 </vr-columns>
 
             </vr-row>
@@ -21,7 +21,9 @@
     </div>
     <vr-row removeline>
         <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
-
+            <div transclude-to="buttons">
+                <vr-button type="Search" formname="formFilter" data-onclick="updateChart" isasynchronous=" true"></vr-button>
+            </div>
         </vr-actionbar>
     </vr-row>
     <vr-row>
