--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/ZoneDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/ZoneDashboard.html
@@ -9,11 +9,11 @@
                                  entityname="" type="standard" options="optionsMeasureTypes" onselectionchange="filterChanged"></vr-dropdown>
                 </vr-columns>
 
-                <vr-columns>
+                <vr-columns colnum="2">
                     <vr-datetimepicker type="date" value="fromDate" label="From:" onvaluechanged="filterChanged"></vr-datetimepicker>
                 </vr-columns>
 
-                <vr-columns>
+                <vr-columns colnum="2">
                     <vr-datetimepicker type="date" value="toDate" label="To:" onvaluechanged="filterChanged"></vr-datetimepicker>
                 </vr-columns>
 
