--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Reports/ZoneDetails.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Reports/ZoneDetails.html
@@ -14,16 +14,16 @@
                                  onsearch="searchZones" entityname="Zones" limitcharactercount="2"></vr-dropdown>
                 </vr-columns>
 
-                <vr-columns>
+                <vr-columns colnum="2">
                     <vr-label>Grouped By:</vr-label>
                     <vr-dropdown datatextfield="name" datavaluefield="value"
                                  entityname="" type="standard" options="timeDimensionTypesOption" onselectionchange="selectedTimeDimensionChanged"></vr-dropdown>
                 </vr-columns>
-                <vr-columns>
+                <vr-columns colnum="2">
                     <vr-datetimepicker type="date" value="fromDate" label="From:" onvaluechanged="updateReport"></vr-datetimepicker>
                 </vr-columns>
 
-                <vr-columns>
+                <vr-columns colnum="2">
                     <vr-datetimepicker type="date" value="toDate" label="To:" onvaluechanged="updateReport"></vr-datetimepicker>
                 </vr-columns>
 
