--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Grid/HeaderTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Grid/HeaderTemplate.html
@@ -1,24 +1,13 @@
-﻿<div ng-class="{ 'sortable': sortable }" class="header-custom" ng-click="grid.appScope.toggleHeader($event)" style="background-color: #829EBF;color:#FFF">
-
-
+﻿<div ng-class="{ 'sortable': col.colDef.enableSorting }" class="header-custom" ng-click="col.colDef.onSort()" style="background-color: #829EBF;color:#FFF">
     <div class="ui-grid-cell-contents" col-index="renderIndex">
-
         <span>
-            <span ng-if="col.colDef.currentSorting != undefined" >
-                <span ng-show="col.colDef.currentSorting=='ASC'">&uarr;</span>
-                <span ng-show="col.colDef.currentSorting=='DESC'">&darr;</span>
-            </span>
-
-            {{col.displayName}} 
-
+                <span ng-show="col.colDef.sortDirection=='ASC'">&uarr;</span>
+                <span ng-show="col.colDef.sortDirection=='DESC'">&darr;</span>
+            {{col.name}}
         </span>
-
     </div>
     <div class="ui-grid-column-menu-button" ng-if="grid.options.enableColumnMenus && !col.isRowHeader  && col.colDef.enableColumnMenu !== false" class="ui-grid-column-menu-button" ng-click="toggleMenu($event)">
-
         <i class="ui-grid-icon-angle-down">&nbsp;</i>
-
     </div>
-
 </div>
                 
